# service-capture

./: .pre-commit-config.yaml  AGENT_GUIDELINES.md  Makefile  README.md  populate_topology.sh
.github/workflows/: README.md  backend-docker-publish.yml  backend-release.yml  frontend-docker-publish.yml  frontend-release.yml  helm-publish.yaml  helm-release.yaml  update-fluxcd.yml
backend/: Cargo.toml  Dockerfile  build.rs  config.yaml
backend/migrations/: 20250228222137_initial.down.sql  20250228222137_initial.up.sql  20251126223410_add_services.down.sql  20251126223410_add_services.up.sql  20251130101500_update_service_dependencies_pk.down.sql  20251130101500_update_service_dependencies_pk.up.sql  20251130193000_add_service_coordinates.down.sql  20251130193000_add_service_coordinates.up.sql  20251202005500_add_metrics.up.sql  20260124203500_refactor_services_to_entities.up.sql
backend/src/: config.rs  error.rs  hams.rs  lib.rs  main.rs  metrics.rs
backend/src/persistence/: mod.rs  parquet.rs
backend/src/webserver/: analysis.rs  dependencies.rs  entities.rs  mod.rs  relationships.rs  services.rs  users.rs
backend/test-data/: config-localhost.yaml
backend/test-data/backups/: backup.parquet
backend/test-data/secrets/db/: password  username
charts/: nginx-view-sample.yaml  service-capture-backend-sample.yaml
charts/nginx-view/: Chart.yaml  values.yaml
charts/service-capture/: Chart.yaml  values.yaml
charts/service-capture-backend/: Chart.yaml  values.yaml
fluxcd-dev/: app-service-capture.yaml  app-ui.yaml  auth-ham4log-be.yaml  auth-users-ben.yaml  db-log4ham.yaml  db-secret-push.yaml  keycloak-realm.yaml  keycloak-realm_orig.yaml  keycloak-service-capture.yaml  keycloak-test-users.yaml  keycloak-ui.yaml  kustomization.yaml  repository.yaml  telemetry-logs.yaml  test-users.yaml  virtualservice.yaml
fluxcd-dev-old/: app-service-capture.yaml  auth-realm.yaml  auth-users-sharon.yaml  keycloak-realm_orig.yaml  kustomization.yaml  virtualservice.yaml
frontend/: Dockerfile  angular.json  federation.config.js  package-lock.json  package.json  proxy.conf.mjs  tsconfig.app.json
frontend/src/: index.html  styles.scss
spec/: backend.md  database.md  frontend.md  helm.md  testing_and_cicd.md
tests/: pyproject.toml
tests/tests/: test_jwt_access.py  utils.py
(+115 files in other folders)
