[package]
name = "service-capture"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version ="^0.8", features = ["macros"] }
url = { version = "2", features = ["serde"] }
log = "^0.4"
clap = { version = "^4.5", features = ["derive", "string"] }
dotenv = "^0.15"
env_logger = "^0.11"
figment = { version = "^0.10", features = ["yaml", "env"] }
figment_file_provider_adapter = "~0.1"
opentelemetry = "0.31.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "~0.8", features = [ "runtime-tokio", "postgres", "migrate", "json", "chrono", "rust_decimal"] }
tokio = { version = "^1.48", features = ["full"] }
tracing = "^0.1"
tracing-opentelemetry = "^0.32.0"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
thiserror = "2.0.17"
reqwest = { version = "^0.13", features = ["json"] }
tower-http = { version = "^0.6", features = ["trace"] }
tokio-util = "^0.7"
serde_with = "^3.12"
chrono = { version = "^0.4", features = ["serde"] }
parquet = "^57"
parquet_derive = "^57"
prometheus = "^0.14"
axum-prometheus = "^0.9"
futures = "~0.3"

hamsrs = { git = "https://github.com/PolecatWorks/hams.git" }
ffi-log2 = { git = "https://github.com/PolecatWorks/hams.git" }
